# CSAssignment2B

./: README.md
src/ConsoleNativeWebApp/: Activity.cpp  Activity.hpp  AsyncTask.cpp  AsyncTask.hpp  CMakeLists.txt  FileUploadException.hpp  Socket.cpp  Socket.hpp  UploadAsyncTask.cpp  UploadAsyncTask.hpp  UploadClient.cpp  WorkerThread.cpp  WorkerThread.hpp
src/UploadWebServer/: ConnectionHandler.cpp  ConnectionHandler.hpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpServlet.cpp  HttpServlet.hpp  HttpServletRequest.cpp  HttpServletRequest.hpp  HttpServletResponse.cpp  HttpServletResponse.h  HttpServletResponse.hpp  Server.cpp  Server.hpp  ServerSocket.cpp  ServerSocket.hpp  UploadHandler.cpp  UploadHandler.hpp  UploadServer.cpp  UploadServer.hpp  UploadServerThread.cpp  UploadServerThread.h  UploadServerThread.hpp  UploadServlet.cpp  UploadServlet.hpp
